Updated the details about myself

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an artist attempting to learn some coding!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born in Puerto Rico!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to draw, play video games, work on old cars, and eat!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A creative job the leaves me with a sense of accomplishment, whether through technical skills or actual creative skills (i.e. - illustration, 3D modeling, etc.)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Good ol' Virginia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I feel as though, for me, it is the perfect point of entry into software development. I used to do some basic web development for a small startup. Web development allows me utilize my creative and technical skills.</p>
     </section>
 
     <footer id="footer">
