--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I like to draw, play video games, work on old cars, and eat!</p>
       <h1>What's your dream job?</h1>
-      <p>A creative job the leaves me with a sense of accomplishment, whether through technical skills or actual creative skills (i.e. - illustration, 3D modeling, etc.)</p>
+      <p>A creative job that leaves me with a sense of accomplishment, whether through technical skills or actual creative skills (i.e. - illustration, 3D modeling, etc.)</p>
       <h1>Where do you live?</h1>
       <p>Good ol' Virginia</p>
       <h1>Why do you want to be a web developer?</h1>
